# ros2_robot_data_collector

./: AGENTS.md  CMakeLists.txt  README.md  package.xml
.github/instructions/: ros2-workspace-cwd.instructions.md
.github/prompts/: collector-smoke-test.prompt.md  critical-review.prompt.md
config/: collector.yaml
include/ros2_robot_data_collector/: collector_config.hpp  hdf5_writer.hpp  sample.hpp  sync_policy.hpp  topic_resolver.hpp
launch/: collector.launch.py
src/: collector_node.cpp  hdf5_writer.cpp  sample_data_publisher.cpp
test/: test_action_sample.cpp  test_hdf5_writer.cpp  test_sync_policy.cpp  test_topic_resolution.cpp
