<?xml version="1.0"?>
<package format="3">
  <name>ros2_robot_data_collector</name>
  <version>0.1.0</version>
  <description>Namespace-aware ROS 2 data collector that synchronizes robot observations and actions and writes them directly to HDF5.</description>
  <maintainer email="yg@example.com">yg</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>libhdf5-dev</build_depend>
  <exec_depend>libhdf5-dev</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>